--- a/src/app/components/pages/sign-up-page/sign-up-page.component.scss
+++ b/src/app/components/pages/sign-up-page/sign-up-page.component.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(/assets/bg.jpeg);
+  background-image: url(/assets/bg.jpg);
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
