--- a/src/app/components/pages/find-people-page/find-people-page.component.html
+++ b/src/app/components/pages/find-people-page/find-people-page.component.html
@@ -1,5 +1,7 @@
-<h1>{{ 'Find people' | translate }} <span *ngIf="searchPref?.location?.fullName">{{ 'in' | translate }} {{ searchPref.location.fullName }}</span>
-  <fa-icon [icon]="faSearchPref" class="primary-item" style="margin-left: 10px;" (click)="openModal(content)"></fa-icon>
+<h1 style="position: relative;;">{{ 'Find people' | translate }} <span *ngIf="searchPref?.location?.fullName">{{ 'in' | translate }} {{ searchPref.location.fullName }}</span>
+  <button class="btn btn-outline-dark" style="position: absolute; top: 0; right: 0;" (click)="openModal(content)">
+    <fa-icon [icon]="faSearchPref"></fa-icon>
+  </button>
 </h1>
 
 <loader *ngIf="loading"></loader>
