--- a/src/app/components/pages/onboarding-page/onboarding-page.component.html
+++ b/src/app/components/pages/onboarding-page/onboarding-page.component.html
@@ -13,96 +13,122 @@
 
 <stepper [activeStep]=step></stepper>
 
-<div *ngIf="1 == step && !showIntroText">
-  <h2 class="section-title">{{ 'About me' | translate }}</h2>
-  <div class="onboarding-step-cont border shadow-sm">
-    <form [formGroup]="accountInfoForm">
-      <div class="form-group row">
-        <label class="col-sm-2 col-form-label">{{ 'Name' | translate }}</label>
-        <div class="col-sm-10">
-          <div class="radio">
-            <input class="form-control" type="text" name="name" formControlName="name"
-              placeholder="{{ 'Your name' | translate }}">
-          </div>
-          <div>
-            <small *ngIf="name.invalid && (name.dirty || name.touched)" class="text-danger">
-              <span *ngIf="name?.errors?.minlength">{{ 'Min length required' | translate:{'requiredLength': name?.errors?.minlength?.requiredLength} }}</span>
-              <span *ngIf="name?.errors?.maxlength">{{ 'Max length required' | translate:{'requiredLength': name?.errors?.maxlength?.requiredLength} }}</span>
-              <span *ngIf="!name?.errors?.minlength && !name?.errors?.maxlength">{{ 'Required field' | translate }}</span>
-            </small>
+<div *ngIf="1 == step && !showIntroText" [ngClass]="{'ob-small': showAgePicker}">
+  <div *ngIf="!showAgePicker">
+    <h2 class="section-title">{{ 'About me' | translate }}</h2>
+    <div class="onboarding-step-cont border shadow-sm">
+      <form [formGroup]="accountInfoForm">
+        <div class="form-group row">
+          <label class="col-sm-2 col-form-label">{{ 'Name' | translate }}</label>
+          <div class="col-sm-10">
+            <div class="radio">
+              <input class="form-control" type="text" name="name" formControlName="name"
+                placeholder="{{ 'Your name' | translate }}">
+            </div>
+            <div>
+              <small *ngIf="name.invalid && (name.dirty || name.touched)" class="text-danger">
+                <span *ngIf="name?.errors?.minlength">{{ 'Min length required' | translate:{'requiredLength': name?.errors?.minlength?.requiredLength} }}</span>
+                <span *ngIf="name?.errors?.maxlength">{{ 'Max length required' | translate:{'requiredLength': name?.errors?.maxlength?.requiredLength} }}</span>
+                <span *ngIf="!name?.errors?.minlength && !name?.errors?.maxlength">{{ 'Required field' | translate }}</span>
+              </small>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="form-group row">
-            <label class="col-sm-4 col-form-label">{{ 'I am' | translate }}</label>
-            <div class="col-sm-8">
-              <div class="radio">
-                <label><input type="radio" value="male" name="gender" formControlName="gender">{{ 'Male' | translate }}</label>
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="form-group row">
+              <label class="col-sm-4 col-form-label">{{ 'I am' | translate }}</label>
+              <div class="col-sm-8">
+                <div class="radio">
+                  <label><input type="radio" value="male" name="gender" formControlName="gender">{{ 'Male' | translate }}</label>
+                </div>
+                <div class="radio">
+                  <label><input type="radio" value="female" name="gender" formControlName="gender">{{ 'Female' | translate }}</label>
+                </div>
+                <div>
+                  <small *ngIf="gender.invalid && (gender.dirty || gender.touched)" class="text-danger">
+                    {{ 'Required field' | translate }}
+                  </small>
+                </div>
               </div>
-              <div class="radio">
-                <label><input type="radio" value="female" name="gender" formControlName="gender">{{ 'Female' | translate }}</label>
-              </div>
-              <div>
-                <small *ngIf="gender.invalid && (gender.dirty || gender.touched)" class="text-danger">
-                  {{ 'Required field' | translate }}
-                </small>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="form-group row">
+              <label class="col-sm-4 col-form-label">{{ 'Looking for' | translate }}</label>
+              <div class="col-sm-8">
+                <div class="radio">
+                  <label><input type="radio" value="male" name="interested_in"
+                      formControlName="interested_in">{{ 'Male' | translate }}</label>
+                </div>
+                <div class="radio">
+                  <label><input type="radio" value="female" name="interested_in"
+                      formControlName="interested_in">{{ 'Female' | translate }}</label>
+                </div>
+                <div>
+                  <small *ngIf="interested_in.invalid && (interested_in.dirty || interested_in.touched)"
+                    class="text-danger">
+                    {{ 'Required field' | translate }}
+                  </small>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-sm-6">
-          <div class="form-group row">
-            <label class="col-sm-4 col-form-label">{{ 'Looking for' | translate }}</label>
-            <div class="col-sm-8">
-              <div class="radio">
-                <label><input type="radio" value="male" name="interested_in"
-                    formControlName="interested_in">{{ 'Male' | translate }}</label>
-              </div>
-              <div class="radio">
-                <label><input type="radio" value="female" name="interested_in"
-                    formControlName="interested_in">{{ 'Female' | translate }}</label>
-              </div>
-              <div>
-                <small *ngIf="interested_in.invalid && (interested_in.dirty || interested_in.touched)"
-                  class="text-danger">
-                  {{ 'Required field' | translate }}
-                </small>
-              </div>
+
+        <div class="form-group row">
+          <label class="col-sm-2 col-form-label">{{ 'Birthday' | translate }}</label>
+          <div class="col-sm-10">
+            <date-picker [date]="birthday.value" (dateChange)="dateChange($event)" (changed)="birthday.markAsDirty()"></date-picker>
+            <div>
+              <small *ngIf="birthday.invalid && (birthday.dirty || birthday.touched)" class="text-danger">
+                <span *ngIf="birthday.errors.underage">{{ birthday.errors.underage | translate }}</span>
+                <span *ngIf="!birthday.errors.underage">{{ 'Required field' | translate }}</span>
+              </small>
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="form-group row">
-        <label class="col-sm-2 col-form-label">{{ 'Birthday' | translate }}</label>
-        <div class="col-sm-10">
-          <date-picker [date]="birthday.value" (dateChange)="dateChange($event)" (changed)="birthday.markAsDirty()"></date-picker>
-          <div>
-            <small *ngIf="birthday.invalid && (birthday.dirty || birthday.touched)" class="text-danger">
-              <span *ngIf="birthday.errors.underage">{{ birthday.errors.underage | translate }}</span>
-              <span *ngIf="!birthday.errors.underage">{{ 'Required field' | translate }}</span>
-            </small>
+        <div class="form-group row">
+          <label class="col-sm-2 col-form-label">{{ 'From' | translate}}</label>
+          <div class="col-sm-10">
+            <div class="radio">
+              <location-select [location]="location" (locationChanged)="locationChanged($event)"></location-select>
+            </div>
+            <div>
+              <small *ngIf="city.invalid && (city.dirty || city.touched)" class="text-danger">
+                {{ 'Required field' | translate }}
+              </small>
+            </div>
+          </div>
+        </div>
+      </form>
+      <div class="btn-cont">
+        <button class="btn btn-outline-primary" (click)="showAgePickerStep()" [disabled]="loading">{{ 'Save' | translate }}</button>
+      </div>
+    </div>
+  </div>
+
+  <div *ngIf="showAgePicker">
+    <h2 class="section-title">{{ 'Age preference' | translate }}</h2>
+    <div class="onboarding-step-cont border shadow-sm">
+      <div class="pref-item">
+        <div style="display: flex; flex: 1 0 auto;">
+          <div style="flex: 1 0 auto;">
+            <select class="form-control" [value]="agePref.fromAge" (change)="changePref('fromAge', +$event.target.value)">
+              <option *ngFor="let age of ages" [value]="age" [selected]="age == agePref.fromAge">{{age}}</option>
+            </select>
+          </div>
+          <span style="align-items: center; display: flex; margin: 0 5px;">и</span>
+          <div style="flex: 1 0 auto;">
+            <select class="form-control" [value]="agePref.toAge" (change)="changePref('toAge', +$event.target.value)">
+              <option *ngFor="let age of agesTo" [value]="age" [selected]="age == agePref.toAge">{{age}}</option>
+            </select>
           </div>
         </div>
       </div>
-
-      <div class="form-group row">
-        <label class="col-sm-2 col-form-label">{{ 'From' | translate}}</label>
-        <div class="col-sm-10">
-          <div class="radio">
-            <location-select [location]="location" (locationChanged)="locationChanged($event)"></location-select>
-          </div>
-          <div>
-            <small *ngIf="city.invalid && (city.dirty || city.touched)" class="text-danger">
-              {{ 'Required field' | translate }}
-            </small>
-          </div>
-        </div>
-      </div>
-    </form>
+    </div>
     <div class="btn-cont">
       <button class="btn btn-outline-primary" (click)="saveAccountInfo()" [disabled]="loading">{{ 'Save' | translate }}</button>
     </div>
