Made profile image required

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -200,3 +200,4 @@
 <preferences-modal></preferences-modal>
 <like-modal></like-modal>
 <notifier-container></notifier-container>
+<image-upload-modal></image-upload-modal>
