--- a/src/app/components/pages/onboarding-page/onboarding-page.component.scss
+++ b/src/app/components/pages/onboarding-page/onboarding-page.component.scss
@@ -1,3 +1,14 @@
+.loader-cont {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .section-title {
   padding: 10px 0 20px 0;
   margin: 0;
