--- a/src/app/components/pages/sign-up-page/sign-up-page.component.html
+++ b/src/app/components/pages/sign-up-page/sign-up-page.component.html
@@ -1,4 +1,4 @@
-<div class="bg"></div>
+<div class="bg" [ngStyle]="{ 'background-image': bgImg}"></div>
 <div class="overlay"></div>
 
 <div class="page-cont">
@@ -77,11 +77,11 @@
         </div>
         <button class="btn btn-outline-primary" type="submit" [disabled]="loading">{{ 'Sign up' | translate }}</button>
 
-        <div style="text-align: center; margin: 10px 0;">
+        <div *ngIf="!cordovaService.onCordova" style="text-align: center; margin: 10px 0;">
           {{ 'Or sign up with' | translate }}
         </div>
 
-        <sign-in-with (loadingChanged)="loadingChanged($event)"></sign-in-with>
+        <sign-in-with *ngIf="!cordovaService.onCordova" (loadingChanged)="loadingChanged($event)"></sign-in-with>
 
         <div class="terms-msg">
           {{ "By continuing, you're confirming that you've read and agree to our" | translate }}
